--- a/index.html
+++ b/index.html
@@ -39,7 +39,142 @@
         <h3>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</h3>
       </div>
     </section>
+
+    <section class="home_tv">
+      <div class="home_tv_container">
+        <div class="home_tv_content">  
+          <h1 class="h1_50">TV로 즐기세요.</h1>
+          <h2>스마트 TV, PlayStation, Xbox, Chromecast, Apple TV, 블루레이 플레이어 등 다양한 디바이스에서 시청하세요.</h2>
+        </div>
+        <div class="home_tv_img_container">
+          <div class="home_tv_animation_container">
+            <img class="home_tv_img" src="img/home/tv.png">
+            <div class="home_tv_card_animation">
+              <video autoplay playsinline muted loop src="video/video-tv.m4v"></video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="home_down">
+      <div class="home_down_container">
+        <div class="home_down_content">  
+          <h1 class="h1_50">즐겨 보는 콘텐츠를 저장해 이동 중에도 시청하세요.</h1>
+          <h2>오프라인으로 즐기고 데이터를 절약하세요.</h2>
+        </div>
+        <div class="home_down_img_container">
+          <div class="home_down_animation_container">
+            <img class="home_down_img" src="img/home/down.jpg">
+            <div class="home_down_card_animation">
+              <div class="home_down_card_animation_img">
+                <img src="img/home/boxshot.png">
+              </div>
+              <div class="home_down_card_animation_text">
+                <div class="home_down_card_animation_text_01">기묘한 이야기</div>
+                <div class="home_down_card_animation_text_02">저장 중...</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="home_device">
+      <div class="home_device_container">
+        <div class="home_device_content">  
+          <h1 class="h1_50">다양한 디바이스에서 시청하세요.</h1>
+          <h2>각종 영화와 TV 프로그램을 스마트폰, 태블릿, 노트북, TV에서 무제한으로 스트리밍하세요. 추가 요금이 전혀 없습니다.</h2>
+        </div>
+        <div class="home_device_img_container">
+          <div class="home_device_animation_container">
+            <img class="home_device_img" src="img/home/device.png">
+            <div class="home_device_card_animation">
+              <video autoplay playsinline muted loop src="video/video-devices.m4v"></video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="home_faq">
+      <div class="home_faq_container">
+        <h1 class="h1_50">자주 묻는 질문</h1>
+        <ul class="home_faq_list">
+          <li>
+            <button class="home_faq_question"><h2>넷플릭스란 무엇인가요?</h2></button>
+          </li>
+          <li>
+            <button class="home_faq_question"><h2>넷플릭스 요금은 얼마인가요?</h2></button>
+          </li>
+          <li>
+            <button class="home_faq_question"><h2>어디에서 시청할 수 있나요?</h2></button>
+          </li>
+          <li>
+            <button class="home_faq_question"><h2>멤버십을 해지하려면 어떻게 하나요?</h2></button>
+          </li>
+          <li>
+            <button class="home_faq_question"><h2>넷플릭스에서 어떤 콘텐츠를 시청할 수 있나요?</h2></button>
+          </li>
+          <li>
+            <button class="home_faq_question"><h2>무료 이용에 관해 자세히 알 수 있을까요?</h2></button>
+          </li>
+        </ul>
+
+          <div class="faq_email_container">
+            <form action="join.php" class="faq_email">
+              <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
+              <button type="submit" class="h3_30">30일 무료 이용 ></button>
+            </form>
+            <h3>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</h3>
+          </div>
+      </div>
+
+    </section>
+
   </main>
+
+  <footer class="netflix_footer">
+    <div class="netflix_footer_container">
+      <div class="netflix_footer_wrap">
+        <div class="netflix_footer_content">
+          <p><a>질문이 있으신가요? 고객 센터에 문의하세요.</a></p>
+          <ul class="netflix_footer_list">
+            <li>자주 묻는 질문</li>
+            <li>고객 센터</li>
+            <li>계정</li>
+            <li>미디어 센터</li>
+            <li>투자 정보(IR)</li>
+            <li>입사 정보</li>
+            <li>Netflix 지원 디바이스</li>
+            <li>이용 약관</li>
+            <li>개인정보</li>
+            <li>쿠키 설정</li>
+            <li>회사 정보</li>
+            <li>문의하기</li>
+            <li>속도 테스트</li>
+            <li>법적 고지</li>
+            <li>Netflix 오리지널</li>
+          </ul>
+          <div class="netflix_footer_language">
+            <div></div>
+            <p>Netflix 대한민국</p>
+          </div>
+          <div class="netflix_footer_text">
+            <div>넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호:
+            </div>
+            <div>대표: 레지널드 숀 톰프슨
+            </div>
+            <div>이메일 주소: korea@netflix.com</div>
+            <div>주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동 20층 우편번호 03161</div>
+            <div>클라우드 호스팅: Amazon Web Services Inc.</div>
+            <div>공정거래위원회 웹사이트 링크</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </footer>
 
 </body>
 
