--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
 </head>
 
+
 <body>
   <header class="home_header">
     <img src="img/home/logo.svg" id="logo">
-    <button>로그인</button>
+    <button onclick = "location.href='login.html'">로그인</button>
   </header>
 
   <main>
