--- a/index.html
+++ b/index.html
@@ -19,31 +19,35 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
 
 
-</head>
+  <script src="https://kit.fontawesome.com/53dc0a0ec3.js" crossorigin="anonymous"></script>
 
+</head>
 
 <body>
   <header class="home_header">
     <img src="img/home/logo.svg" id="logo">
-    <button onclick = "location.href='login.html'">로그인</button>
+    <button>로그인</button>
   </header>
 
   <main>
     <section class="home_hero">
       <div class="hero_container">
         <h1 class="text_align_center home_hero_h1">영화, TV 프로그램을<br>무제한으로.</h1>
-        <h2 class="home_hero_h2">다양한 디바이스에서 시청하세요. 언제든 해지하실 수 있습니다.</h2>
-        <form action="join.php" class="form_email">
-          <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
-          <button type="submit" class="h3_30">30일 무료 이용 ></button>
-        </form>
-        <h3>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</h3>
+        <h2 class="home_hero_h2">다양한 디바이스에서 시청하세요. <span>언제든 해지하실 수 있습니다.</spa></h2>
+      
+        <div class="form_email_container">
+          <form action="join.php" class="form_email">
+            <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
+            <button type="submit" class="h3_30">30일 무료 이용 ></button>
+          </form>
+          <p class="form_email_p">시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</p>
+        </div>
       </div>
     </section>
 
     <section class="home_tv">
       <div class="home_tv_container">
-        <div class="home_tv_content">  
+        <div class="home_tv_content">
           <h1 class="h1_50">TV로 즐기세요.</h1>
           <h2>스마트 TV, PlayStation, Xbox, Chromecast, Apple TV, 블루레이 플레이어 등 다양한 디바이스에서 시청하세요.</h2>
         </div>
@@ -60,7 +64,7 @@
 
     <section class="home_down">
       <div class="home_down_container">
-        <div class="home_down_content">  
+        <div class="home_down_content">
           <h1 class="h1_50">즐겨 보는 콘텐츠를 저장해 이동 중에도 시청하세요.</h1>
           <h2>오프라인으로 즐기고 데이터를 절약하세요.</h2>
         </div>
@@ -83,7 +87,7 @@
 
     <section class="home_device">
       <div class="home_device_container">
-        <div class="home_device_content">  
+        <div class="home_device_content">
           <h1 class="h1_50">다양한 디바이스에서 시청하세요.</h1>
           <h2>각종 영화와 TV 프로그램을 스마트폰, 태블릿, 노트북, TV에서 무제한으로 스트리밍하세요. 추가 요금이 전혀 없습니다.</h2>
         </div>
@@ -103,32 +107,44 @@
         <h1 class="h1_50">자주 묻는 질문</h1>
         <ul class="home_faq_list">
           <li>
-            <button class="home_faq_question"><h2>넷플릭스란 무엇인가요?</h2></button>
+            <button class="home_faq_question">
+              <h2>넷플릭스란 무엇인가요?</h2>
+            </button>
           </li>
           <li>
-            <button class="home_faq_question"><h2>넷플릭스 요금은 얼마인가요?</h2></button>
+            <button class="home_faq_question">
+              <h2>넷플릭스 요금은 얼마인가요?</h2>
+            </button>
           </li>
           <li>
-            <button class="home_faq_question"><h2>어디에서 시청할 수 있나요?</h2></button>
+            <button class="home_faq_question">
+              <h2>어디에서 시청할 수 있나요?</h2>
+            </button>
           </li>
           <li>
-            <button class="home_faq_question"><h2>멤버십을 해지하려면 어떻게 하나요?</h2></button>
+            <button class="home_faq_question">
+              <h2>멤버십을 해지하려면 어떻게 하나요?</h2>
+            </button>
           </li>
           <li>
-            <button class="home_faq_question"><h2>넷플릭스에서 어떤 콘텐츠를 시청할 수 있나요?</h2></button>
+            <button class="home_faq_question">
+              <h2>넷플릭스에서 어떤 콘텐츠를 시청할 수 있나요?</h2>
+            </button>
           </li>
           <li>
-            <button class="home_faq_question"><h2>무료 이용에 관해 자세히 알 수 있을까요?</h2></button>
+            <button class="home_faq_question">
+              <h2>무료 이용에 관해 자세히 알 수 있을까요?</h2>
+            </button>
           </li>
         </ul>
 
-          <div class="faq_email_container">
-            <form action="join.php" class="faq_email">
-              <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
-              <button type="submit" class="h3_30">30일 무료 이용 ></button>
-            </form>
-            <h3>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</h3>
-          </div>
+        <div class="faq_email_container">
+          <form action="join.php" class="faq_email">
+            <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
+            <button type="submit" class="h3_30">30일 무료 이용 ></button>
+          </form>
+          <p>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</p>
+        </div>
       </div>
 
     </section>
@@ -158,14 +174,19 @@
             <li>Netflix 오리지널</li>
           </ul>
           <div class="netflix_footer_language">
-            <div></div>
+            <label for="select_language">
+              <i class="fas fa-globe"></i>
+            </label>
+            <select id="select_language" class="footer_select" onchange="window.open(options[selectedIndex].value);">
+              <option selected value="https://netflix.com/kr/" data-language="ko" data-country="KR">한국어 &#9660</option>
+              <option selected value="https://netflix.com/kr-en/" data-language="en" data-country="KR">English &#9660
+              </option>
+            </select>
             <p>Netflix 대한민국</p>
           </div>
           <div class="netflix_footer_text">
-            <div>넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호:
-            </div>
-            <div>대표: 레지널드 숀 톰프슨
-            </div>
+            <div>넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호:</div>
+            <div>대표: 레지널드 숀 톰프슨</div>
             <div>이메일 주소: korea@netflix.com</div>
             <div>주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동 20층 우편번호 03161</div>
             <div>클라우드 호스팅: Amazon Web Services Inc.</div>
