--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
   <main>
     <section class="home_hero">
       <div class="hero_container">
-        <h1 class="text_align_center home_hero_h1">영화, TV 프로그램을<br>무제한으로.</h1>
-        <h2 class="home_hero_h2">다양한 디바이스에서 시청하세요. <span>언제든 해지하실 수 있습니다.</spa></h2>
-      
-        <div class="form_email_container">
-          <form action="join.php" class="form_email">
-            <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
-            <button type="submit" class="h3_30">30일 무료 이용 ></button>
-          </form>
-          <p class="form_email_p">시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</p>
+        <div class="hero_content_wrap">
+          <h1 class="text_align_center home_hero_h1">영화, TV 프로그램을<br>무제한으로.</h1>
+          <h2 class="home_hero_h2">다양한 디바이스에서 시청하세요. <span>언제든 해지하실 수 있습니다.</spa></h2>
+        
+          <div class="form_email_container">
+            <form action="join.php" class="form_email">
+              <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
+              <button type="submit" class="h3_30">30일 무료 이용 ></button>
+            </form>
+            <p class="form_email_p">시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</p>
+        </div>
         </div>
       </div>
     </section>
@@ -193,12 +195,14 @@
           </li>
         </ul>
 
-        <div class="faq_email_container">
-          <form action="join.php" class="faq_email">
-            <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
-            <button type="submit" class="h3_30">30일 무료 이용 ></button>
-          </form>
-          <p>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</p>
+        <div class="faq_email_container_wrap">
+          <div class="faq_email_container">
+            <form action="join.php" class="faq_email">
+              <input type="email" id="e_mail" name="user_email" placeholder="이메일 주소"></input>
+              <button type="submit" class="h3_30">30일 무료 이용 ></button>
+            </form>
+            <p>시청할 준비가 되셨나요? 계정을 등록하거나 액세스하려면 이메일 주소를 입력하세요.</p>
+          </div>
         </div>
       </div>
 
