--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <link rel="stylesheet" type="text/css" href="css/common.css"> <!-- 공통 css -->
   <link rel="stylesheet" type="text/css" href="css/index.css">
 
+  <!-- 파비콘 -->
+  <link rel="shortcut icon" href="img/home/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/home/favicon.ico" type="image/x-icon">
+
 
   <script src="https://kit.fontawesome.com/53dc0a0ec3.js" crossorigin="anonymous"></script>
 
