--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <header class="home_header">
     <img src="img/home/logo.svg" id="logo">
-    <button>로그인</button>
+    <button type="button" onclick="location.href='login.html' ">로그인</button>
   </header>
 
   <main>
@@ -186,7 +186,7 @@
           </li>
           <li>
             <button class="home_faq_question" onclick="accodionAction(this);">
-              <h2>넷플릭스에서 어떤 콘텐츠를 시청할 수 있나요?</h2>
+              <h2>넷플릭스의 주요 컨텐츠는 무엇인가요?</h2>
             </button>
             <div class="home_faq_answer">
               <h2>넷플릭스는 장편 영화, 다큐멘터리, TV 프로그램, 애니메이션, 각종 상을 수상한 넷플릭스 오리지널 등 수많은 콘텐츠를 확보하고 있습니다. 마음에 드는 콘텐츠를 원하는 시간에 원하는 만큼 시청하세요. 30일 무료 이용으로 넷플릭스의 무한한 콘텐츠 세상을 만나보세요.
