--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <p>Netflix 대한민국</p>
           </div>
           <div class="netflix_footer_text">
-            <div>넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호:</div>
+            <div>넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호: 070-3945-1039</div>
             <div>대표: 레지널드 숀 톰프슨</div>
             <div>이메일 주소: korea@netflix.com</div>
             <div>주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동 20층 우편번호 03161</div>
