--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Netflix, Video" />
     <meta name="author" content="wook" />
 
+    
     <!-- 브라우저 css 링크 -->
     <link rel="stylesheet" type="text/css" href="css/destyle.css" />
     <!-- 초기화 css -->
@@ -17,6 +18,10 @@
     <!-- 공통 css -->
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/login.css" />
+    
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="img/home/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/home/favicon.ico" type="image/x-icon"> 
 
     <script
       src="https://kit.fontawesome.com/53dc0a0ec3.js"
