--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
   <!-- 브라우저 css 링크 -->
   <link rel="stylesheet" type="text/css" href="css/destyle.css"> <!-- 초기화 css -->
-  <link rel="stylesheet" type="text/css" href="css/common.css"> <!-- 공통 css -->
+  <link rel="stylesheet" type="text/css" href="css/common.css"> 
+  <!-- 공통 css -->
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <!--  미디어쿼리  -->
+  <link rel="stylesheet" type="text/css" href="css/media.css">
 
   <!-- 파비콘 -->
   <link rel="shortcut icon" href="img/home/favicon.ico" type="image/x-icon">
