--- a/login.html
+++ b/login.html
@@ -18,6 +18,8 @@
     <!-- 공통 css -->
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <!--  미디어쿼리  -->
+    <link rel="stylesheet" type="text/css" href="css/media.css">
     
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="img/home/favicon.ico" type="image/x-icon">
@@ -28,43 +30,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <style>
-      @media screen and (max-width: 738px) {
-
-        .login_section {
-          height: auto;
-        }
-
-        .home_header {
-          height: 75px;
-        }
-
-        .login_bg {
-          width: 100%;
-          height: auto;
-          background-color: black;
-          padding: 20px 0 30px;
-        }
-
-        .login_body {
-          width: 100%;
-          height: 100%;
-          padding: 0 5%;
-        }
-
-        .home_header {
-          background-color: black;
-        }
-
-        .netflix_footer_login {
-          display: block;
-        }
-
-      }
-    </style>
+    
   </head>
   <body>
-    <header class="home_header">
+    <header class="home_header_login">
       <nav class="nav_logo">
         <img src="img/home/logo.svg" id="logo" />
       </nav>
